# bitcask

rust/building-blocks/bb-1-exercise/: Cargo.toml  README.md
rust/building-blocks/bb-1-exercise/src/: cli.yaml  main.rs
rust/building-blocks/bb-2-1-exercise/: Cargo.toml  game_moves.txt
rust/building-blocks/bb-2-1-exercise/src/: lib.rs  main.rs
rust/building-blocks/bb-2-2-exercise/: Cargo.toml
rust/building-blocks/bb-2-2-exercise/src/: main.rs
rust/building-blocks/bb-2-3-exercise/: .gitignore  Cargo.toml
rust/building-blocks/bb-2-3-exercise/src/: lib.rs  main.rs
rust/building-blocks/bb-3-exercise/: Cargo.toml
rust/building-blocks/bb-3-exercise/src/: main.rs
rust/building-blocks/bb-4-exercise/: Cargo.toml
rust/building-blocks/bb-4-exercise/src/: lib.rs
rust/projects/project-1-solution/: .gitignore  Cargo.toml
rust/projects/project-1-solution/src/: kv.rs  lib.rs
rust/projects/project-2-solution/: .gitignore  Cargo.toml
rust/projects/project-2-solution/src/: error.rs  kv.rs  lib.rs
rust/projects/project-3-solution/: .gitignore  Cargo.toml
rust/projects/project-3-solution/benches/: engine_bench.rs
rust/projects/project-3-solution/src/: client.rs  error.rs  lib.rs  server.rs
rust/projects/project-3-solution/src/engines/: kvs.rs  mod.rs  sled.rs
rust/projects/project-3-solution/tests/: cli.rs
rust/projects/project-4-solution/: Cargo.toml
rust/projects/project-4-solution/benches/: engine_bench.rs
rust/projects/project-4-solution/src/: client.rs  common.rs  server.rs
rust/projects/project-4-solution/src/engines/: kvs.rs  mod.rs  sled.rs
rust/projects/project-4-solution/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
rust/projects/project-5-solution/src/: client.rs  server.rs
rust/projects/project-5-solution/src/engines/: kvs.rs  sled.rs
rust/projects/project-5-solution/src/thread_pool/: mod.rs  rayon.rs
