[package]
name = "bb-1-exercise"
version = "0.1.0"
authors = ["cedrickchee <cedrick.chee@gmail.com>"]
edition = "2018"
repository = "https://github.com/cedrickchee/practical-rust"
description = "Building Blocks 1 (CLI programming) exercise for PingCap's Practical Networked Applications in Rust course"
license = "MIT"
readme = "README.md"
keywords = ["rust", "distributed-systems", "networked-app", "project", "educational"]
categories = ["command-line-utilities", "database-implementations"]

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
dotenv_codegen = "0.15.0"
