[package]
name = "bb-4-exercise"
version = "0.1.0"
authors = ["cedrickchee <cedrick.chee@gmail.com>"]
edition = "2018"
repository = "https://github.com/cedrickchee/practical-rust"
description = "Building Blocks 4 (multithreading and threadpool) exercise for PingCap's Practical Networked Applications in Rust course"
license = "MIT"
readme = "README.md"
keywords = ["rust", "distributed-systems", "networked-app", "project", "educational"]
categories = ["command-line-utilities", "database-implementations"]

[dependencies]
